# src/app/services/models.ts
@@ -1,5 +1,4 @@
-export {StatsDto} from './models/stats-dto';
-export {MatchDto} from './models/match-dto';
-export {JoueurDto} from './models/joueur-dto';
-export {EquipeDto} from './models/equipe-dto';
-export {TotalDto} from './models/total-dto';
+export { StatsDto } from './models/stats-dto';
+export { MatchDto } from './models/match-dto';
+export { JoueurDto } from './models/joueur-dto';
+export { EquipeDto } from './models/equipe-dto';
